--- a/apps/browser/package.json
+++ b/apps/browser/package.json
@@ -1,9 +1,31 @@
 {
-  "name": "@final/browser",
-  "version": "1.0.0",
+  "name": "browser",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
-  "license": "ISC"
+  "dependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-form": "^0.29.2",
+    "@tanstack/react-router": "^1.49.1",
+    "@tanstack/router-devtools": "^1.49.1",
+    "@tanstack/zod-form-adapter": "^0.29.2",
+    "framer-motion": "^11.3.29",
+    "lucide-react": "^0.429.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "use-debounce": "^10.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
+  }
 }
